src/Home.css
/* ... */
.home-prize-btn:active {
  transform: scale(0.95);
}

.home-prize-btn:hover {
  box-shadow: 0 6px 16px rgba(151, 13, 133, 0.4);
}

.home-prize-btn-left {
  padding-left: 95px;
  margin-left: 0;
  flex: 1.3;
}

.home-prize-btn-right {
  padding-left: 28px;
  padding-right: 75px;
  margin-right: 0;
}

.home-prize-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  position: relative;
  z-index: 1;
  flex: 1;
}

[dir="rtl"] .home-prize-text {
  align-items: flex-end;
  text-align: right;
}

[dir="rtl"] .home-prize-btn-right {
  padding-right: 120px;
}

@media screen and (max-width: 900px) {
  [dir="rtl"] .home-prize-btn-right {
    padding-right: 90px;
  }
}

@media screen and (max-width: 480px) {
  [dir="rtl"] .home-prize-btn-right {
    padding-right: 70px;
  }
}

@media screen and (max-width: 443px) {
  [dir="rtl"] .home-prize-btn-right {
    padding-right: 65px;
  }
}

@media screen and (max-width: 419px) {
  [dir="rtl"] .home-prize-btn-right {
    padding-right: 60px;
  }
}

@media screen and (max-width: 399px) {
  [dir="rtl"] .home-prize-btn-right {
    padding-right: 55px;
  }
}

@media screen and (max-width: 369px) {
  [dir="rtl"] .home-prize-btn-right {
    padding-right: 50px;
  }
}

[dir="rtl"] .home-prize-text span {
  font-size: 22px;
  line-height: 1.4;
}

@media screen and (max-width: 900px) {
  [dir="rtl"] .home-prize-text span {
    font-size: 16px;
  }
}

@media screen and (max-width: 480px) {
  [dir="rtl"] .home-prize-text span {
    font-size: 11px;
  }
}

@media screen and (max-width: 399px) {
  [dir="rtl"] .home-prize-text span {
    font-size: 9px;
  }
}

@media screen and (max-width: 369px) {
  [dir="rtl"] .home-prize-text span {
    font-size: 8px;
  }
}

.home-prize-text span {
  font-family: 'Poppins', sans-serif;
  font-size: 27px;
  font-weight: 700;
  color: white;
  line-height: 1.4;
  white-space: normal;
}

.home-prize-btn-left .home-prize-text span {
  line-height: 1.55;
}

[dir="rtl"] .home-prize-btn-left .home-prize-text {
  gap: 10px;
}

.home-prize-img {
  height: auto;
  z-index: 2;
}

.home-prize-img-left {
  position: absolute;
  left: -70px;
  top: -47px;
  width: 140px;
}

.home-prize-img-right {
  position: absolute;
  right: -5px;
  bottom: -15px;
  width: 100px;
}

/* ==================== RESPONSIVE STYLES ==================== */

/* Tablet breakpoint */
@media screen and (max-width: 900px) {
  .home-fish {
    width: 190px;
    left: -55px;
    top: -5px;
  }

  .home-cloud {
    width: 390px;
    right: -180px;
    top: 79px;
  }

  .home-profile {
    width: 60px;
    height: 60px;
    top: 20px;
    right: 20px;
  }

  .home-logout-btn {
    width: 40px;
    height: 40px;
    top: 90px;
    right: 20px;
  }

  .home-content {
    max-width: 100%;
    padding: 10px 12px 0px 12px;
  }

  .home-logo {
    width: 200px;
    margin-top: 10px;
    overflow: visible;
  }

  .home-title {
    font-size: 58px;
    margin: 16 px 0 0 0;
  }

  .home-cat-container {
    max-width: 285px;
    height: 210px;
    margin-top: 250px;
  }

  .home-cat-circle {
    width: 265px;
    height: 90px;
  }

  .home-cat {
    width: 300px;
    margin-left: 300px;
    margin-bottom: 1px;
  }

  .home-buttons {
    max-width: 90%;
    max-height: 90%;
    margin-top: -65px;
    gap: 8px;
    padding: 0 5px;
  }

  .home-btn {
    padding: 20px 39px;
    font-size: 17px;
    border-width: 3px;
    border-radius: 12px;
  }

  .home-step-tag {
    top: -45px;
    width: 65%;
    padding: 3% 0;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 19px;
    border-radius: 30px 30px 0 0;
  }

  .home-btn-icon-w {
    width: 28px;
    height: 28px;
    top: -8px;
    right: -6px;
    font-size: 14px;
    border-width: 3px;

  }

  .home-participate {
    padding-bottom: 0px;
    margin-top: 80px;
  }

  .home-participate-title,
  .home-participate h2.home-participate-title {
    font-size: 30px !important;
    padding-top: 6 0px;
    margin-top: 2px;
    margin-bottom: 10px;
  }

  .home-prize-buttons {
    width: 97%;
    gap: 10px;
    padding: 0 18px;
    margin-left: 0;
    margin-top: 20px;
    margin-bottom: 0px;
    box-sizing: border-box;
  }

  .home-prize-btn {
    padding: 11px 8px;
    border-radius: 16px;
    min-height: 94px;
    gap: 10px;
  }

  .home-prize-btn-left {
    padding-left: 110px;
    margin-left: 40px;
  }

  .home-prize-btn-right {
    padding-left: 22px;
    padding-right: 45px;
  }

  .home-prize-text span {
    font-size: 20px;
  }

  .home-prize-img-left {
    width: 100px;
    left: -40px;
    top: -32px;
  }

  .home-prize-img-right {
    width: 16%;
    right: 1px;
    bottom: 9px;
  }
}
/* ... */

